# iterative_closest_point

./: CMakeLists.txt  CMakeLists.txt~
res/: CMakeLists.txt
res/sample_data/: CMakeLists.txt
res/sample_data/Cam0/: image0016.ppm  image0017.ppm  image0018.ppm  image0019.ppm  image0020.ppm
res/sample_data/Cam1/: image0016.ppm  image0017.ppm  image0018.ppm  image0019.ppm  image0020.ppm
res/sample_data/Cam2/: image0016.ppm  image0017.ppm  image0018.ppm  image0019.ppm  image0020.ppm
res/sample_data/Cam3/: image0016.ppm  image0017.ppm  image0018.ppm  image0019.ppm  image0020.ppm
res/sample_data/Cam4/: image0016.ppm  image0017.ppm  image0018.ppm  image0019.ppm  image0020.ppm
res/sample_data/scans/: CMakeLists.txt  Scan_for_MI_0018.txt  Scan_for_MI_0019.txt
src/: CMakeLists.txt  CMakeLists.txt~  icp.cpp  icp2.cpp
src/cu/: CMakeLists.txt  icp2.cu
